force-app/main/default/objects/Appointment_Slot__c/Appointment_Slot__c.object-meta.xml
<CustomObject>
    <label>Appointment Slot</label>
    <nameField>
        <displayFormat>ASN - {00000}</displayFormat>
        <label>Appointment Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>