force-app/main/default/objects/Appointment_Slot__c/fields/Appointment_Slot_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Slot_Date__c</fullName>
    <label>Appointment Slot Date</label>
    <type>Date</type>
</CustomField>