force-app/main/default/objects/Appointment_Slot__c/fields/End_Slot_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Slot_Time__c</fullName>
    <label>End Slot Time</label>
    <type>Time</type>
</CustomField>