force-app/main/default/objects/Appointment_Slot__c/fields/Slot_Duration_Minute__c.field-meta.xml
<CustomField>
    <fullName>Slot_Duration_Minute__c</fullName>
    <label>Slot Duration Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>