force-app/main/default/objects/Appointment_Slot__c/fields/Start_Slot_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Slot_Time__c</fullName>
    <label>Start Slot Time</label>
    <type>Time</type>
</CustomField>