force-app/main/default/objects/Appointment_Slot__c/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>Running Repair</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>