force-app/main/default/objects/Appointment_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Slot_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Appointment__c</columns>
    <columns>Service_Center__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Slot_Time__c</columns>
    <columns>End_Slot_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Appointment Slots</label>
</ListView>